2001-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-unoptimize-animated-gif): Truncate an animated
	gif to have only one frame when the size is larger than the value
	of `w3m-animated-gif-maximum-size'.
	(w3m-animated-gif-maximum-size): New variable.

2001-06-06  Kenichi OKADA  <okada@opaopa.org>

	* w3m-xmas.el: Require `path-util'.

2001-06-07  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>

	* w3m.el (w3m-exec-process): Replace `delete' with `delq'.

2001-06-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-airs.el (shimbun-get-headers): Added optional argument
	`range'.
	* shimbun/sb-airs.el (shimbun-get-headers): Ditto.
	* shimbun/sb-asahi.el (shimbun-get-headers): Ditto.
	* shimbun/sb-cnet.el (shimbun-get-headers): Ditto.
	* shimbun/sb-fml.el (shimbun-get-headers): Ditto.
	* shimbun/sb-glimpse.el (shimbun-get-headers): Ditto.
	* shimbun/sb-gnome.el (shimbun-get-headers): Ditto.
	* shimbun/sb-h14m.el (shimbun-get-headers): Ditto.
	* shimbun/sb-hns.el (shimbun-get-headers): Ditto.
	* shimbun/sb-impress.el (shimbun-get-headers): Ditto.
	* shimbun/sb-mainichi.el (shimbun-get-headers): Ditto.
	* shimbun/sb-mew.el (shimbun-get-headers): Ditto.
	* shimbun/sb-mhonarc.el (shimbun-get-headers): Ditto.
	* shimbun/sb-namazu.el (shimbun-get-headers): Ditto.
	* shimbun/sb-netbsd.el (shimbun-get-headers): Ditto.
	* shimbun/sb-nikkei.el (shimbun-get-headers): Ditto.
	* shimbun/sb-ruby.el (shimbun-get-headers): Ditto.
	* shimbun/sb-sponichi.el (shimbun-get-headers): Ditto.
	* shimbun/sb-yahoo.el (shimbun-get-headers): Ditto.
	* shimbun/sb-yomiuri.el (shimbun-get-headers): Ditto.
	* shimbun/sb-zdnet.el (shimbun-get-headers): Ditto.
	* shimbun/sb-lump.el (shimbun-headers): Ditto.
	* shimbun/sb-meadow.el (shimbun-headers): Ditto.
	* shimbun/sb-slashdot-jp.el (shimbun-headers): Ditto.
	(shimbun-slashdot-jp-story-max-pages): New variable.
	(shimbun-slashdot-jp-comment-max-pages): Ditto.
	(shimbun-slashdot-jp-comments-per-story): Ditto.
